<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textColor="@color/result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/ac"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/ac"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/mod"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/mod"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/div"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/div"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/sqrt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/sqrt"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:text="@string/seven"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:text="@string/eight"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/nine"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/multiply"
                android:textColor="@color/text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/four"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/five"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/six"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/minus"
                android:textColor="@color/text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/one"
                android:textColor="@color/result"
                />
            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/back2"
                android:text="@string/two"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:text="@string/three"
                android:textColor="@color/result" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back2"
                android:shadowColor="@color/white"
                android:text="@string/plus"
                android:textColor="@color/text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/back2"
            android:text="@string/zero"
            android:textColor="@color/result" />
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/back2"
            android:text="@string/dot"
            android:textColor="@color/result" />
        <Button
            android:id="@+id/equal"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/text"
            android:shadowColor="@color/white"
            android:text="@string/equal"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>